Prepare IT for parallel run
Signed-off-by: Vasyl Razinkov <vasyl.razinkov@est.tech>
Change-Id: Ie2761c6a13316d1be04afdde0646bec5ce20906f
Issue-ID: SDC-4547